# AndroidCameraScaffold

Code/: settings.gradle
Code/app/: build.gradle
Code/app/src/main/: AndroidManifest.xml
Code/app/src/main/java/me/haipeng/scaffold/camera/: AbsAnalyzer.kt  CameraActivity.kt  CxxAnalyzer.kt  MainActivity.kt  OverlayView.kt
Code/app/src/main/res/layout/: activity_main.xml  scaffold_activity_camera.xml
Code/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
Code/app/src/main/res/values-night/: themes.xml
Code/cxx/: build.gradle
Code/cxx/src/main/: AndroidManifest.xml
Code/cxx/src/main/cpp/: CMakeLists.txt  CxxEntrance.cpp  CxxEntranceCodes.h  CxxEntranceJavaSupport.cpp  CxxEntranceJavaSupport.h  CxxEntranceLog.h  CxxEntranceUtils.cpp  CxxEntranceUtils.h  CxxFunctionsHolder.cpp  CxxFunctionsHolder.h  CxxResult.h
Code/cxx/src/main/cpp/JniHelper/: JNIHelp.h  ScopedUtfChars.h
Code/cxx/src/main/cpp/camera/: CameraAnalyzer.cpp  CameraAnalyzer.h
Code/cxx/src/main/java/me/haipeng/scaffold/camera/cxx/: CxxEntrance.java
Code/gradle/wrapper/: gradle-wrapper.properties
